--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 
 body {
     background-image: url(/bg-image.jpg);
-    background-size: 100%;
+    background-position: center;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
